[gd_scene load_steps=11 format=3 uid="uid://bv67g3ex867u6"]

[ext_resource type="Script" uid="uid://bu4o1a7rbcw1o" path="res://debug/animation_tester/animation_tester.gd" id="1_6ufs8"]
[ext_resource type="Texture2D" uid="uid://cxq1stf75dltm" path="res://debug/animation_tester/sprites/grid.png" id="3_ep1yc"]
[ext_resource type="PackedScene" uid="uid://cy6wwsx18gx4w" path="res://debug/animation_tester/layer_container/layer_container.tscn" id="4_3r6yi"]
[ext_resource type="PackedScene" uid="uid://cjhfcpski13ol" path="res://debug/animation_tester/hover_detection/hover_detection.tscn" id="4_4fikq"]
[ext_resource type="FontFile" uid="uid://b0eimy42hqrtx" path="res://assets/fonts/Brianne_s_hand.ttf" id="5_7sq03"]
[ext_resource type="Script" uid="uid://cc0vovi1bh6pb" path="res://debug/animation_tester/history.gd" id="5_afno0"]
[ext_resource type="PackedScene" uid="uid://dhxw6s3q3iut4" path="res://debug/animation_tester/toolbar/toolbar.tscn" id="6_4fikq"]
[ext_resource type="PackedScene" uid="uid://coqdor6o4ec8o" path="res://debug/animation_tester/inspector/inspector.tscn" id="6_mf01o"]
[ext_resource type="PackedScene" uid="uid://bs8fw55lobn6e" path="res://debug/animation_tester/timeline/timeline.tscn" id="8_14ts1"]
[ext_resource type="PackedScene" uid="uid://b7628oeefw60q" path="res://debug/animation_tester/misc/texture_atlas_converter.tscn" id="10_kjhqh"]

[node name="Animation Tester" type="Node2D"]
script = ExtResource("1_6ufs8")

[node name="grid" type="TextureRect" parent="."]
offset_left = -48.0
offset_top = -47.0
offset_right = 1209.0
offset_bottom = 687.0
texture = ExtResource("3_ep1yc")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="grid"]
layout_mode = 0
offset_left = 570.0
offset_top = 285.0
offset_right = 665.0
offset_bottom = 380.0
color = Color(1, 1, 0.67451, 1)

[node name="SpriteContainer" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(570, 288)

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 324)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 648
limit_smoothed = true

[node name="Dialogs" type="Node" parent="."]

[node name="LoadSpriteDialog" type="FileDialog" parent="Dialogs"]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn")
use_native_dialog = true

[node name="AddImageDialog" type="FileDialog" parent="Dialogs"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open File(s)"
ok_button_text = "Open"
file_mode = 1
filters = PackedStringArray("*.png")
use_native_dialog = true

[node name="UI_LAYER" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI_LAYER"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI_LAYER/UI"]
layout_mode = 0
offset_left = 851.0
offset_top = 474.0
offset_right = 1152.0
offset_bottom = 648.0
vertical_scroll_mode = 2

[node name="LayerContainer" parent="UI_LAYER/UI/ScrollContainer" instance=ExtResource("4_3r6yi")]
unique_name_in_owner = true
layout_mode = 2

[node name="Hover_Detection" parent="UI_LAYER/UI/ScrollContainer" instance=ExtResource("4_4fikq")]
visible = false
custom_minimum_size = Vector2(318, 179)
layout_mode = 2

[node name="Overview" type="Control" parent="UI_LAYER/UI"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 566.0
offset_top = 43.0
offset_right = 1152.0
offset_bottom = 239.0
mouse_filter = 2

[node name="Preview" type="TextureRect" parent="UI_LAYER/UI/Overview"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -113.0
offset_bottom = 143.0
grow_horizontal = 0
mouse_filter = 2
stretch_mode = 3

[node name="Name" type="RichTextLabel" parent="UI_LAYER/UI/Overview"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.672
anchor_top = 0.122
anchor_right = 0.672
anchor_bottom = 0.122
offset_left = -155.84
offset_top = -23.912
offset_right = 79.16
offset_bottom = 24.088
grow_horizontal = 0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_7sq03")
theme_override_font_sizes/normal_font_size = 32
text = "Name"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Descriptions" type="RichTextLabel" parent="UI_LAYER/UI/Overview"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.807
anchor_top = 0.487
anchor_right = 0.807
anchor_bottom = 0.487
offset_left = -333.902
offset_top = -47.452
offset_right = 0.0979614
offset_bottom = 47.548
grow_horizontal = 0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_7sq03")
theme_override_font_sizes/normal_font_size = 24
text = "Position: (0, 0)
Rotation: 0Â°
Scale: (1, 1)"
horizontal_alignment = 2

[node name="TextEdit" type="TextEdit" parent="UI_LAYER/UI/Overview"]
visible = false
layout_mode = 0
offset_right = 158.0
offset_bottom = 8.0
focus_mode = 0

[node name="Inspector" parent="UI_LAYER/UI" instance=ExtResource("6_mf01o")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 863.0
offset_top = 187.0
offset_right = 1154.0
offset_bottom = 474.0

[node name="Top" parent="UI_LAYER/UI" instance=ExtResource("6_4fikq")]
layout_mode = 0

[node name="Control" parent="UI_LAYER/UI" instance=ExtResource("8_14ts1")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 451.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1

[node name="History" type="Node" parent="."]
script = ExtResource("5_afno0")

[node name="Misc" type="Node" parent="."]

[node name="TextureAtlasConverter" parent="Misc" instance=ExtResource("10_kjhqh")]

[connection signal="file_selected" from="Dialogs/LoadSpriteDialog" to="." method="_on_load_sprite_dialog_file_selected"]
[connection signal="files_selected" from="Dialogs/AddImageDialog" to="." method="_on_add_image_dialog_files_selected"]
